--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <title>Form Validation</title>
 </head>
 <body>
+    <div class="container">
+        <form action="" id="form">.
+            <div class="username">
+              <label for="username">Username</label>
+              <input type="text" id="username" name="username" placeholder="Type your username here...">
+            </div>
+            <div class="email">
+              <label for="email">Email</label>
+              <input type="text" id="email" name="email" placeholder="Type your Email here...">
+            </div>
+            <div class="phone">
+              <label for="number">Phone Number</label>
+              <input type="number" id="phone-number" name="number placeholder="Type your number here...">
+            </div>
+            <div class="password">
+              <label for="password">Password</label>
+              <input type="text" id="password" name="password" placeholder="Type your password here...">
+            </div>
+            <div class="confirm-password">
+              <label for="confirm-password">Confirm Password</label>
+              <input type="text" id="confirm-password" name="confirm-password" placeholder="Confirm your password here...">
+            </div>
+            <button type="submit">submit</button>
+        </form>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
