--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>Form Validation</title>
 </head>
-<body>
-    <div class="container">
+<body class="bg-indigo-300 flex container justify-center items-center">
+    <div class="container rounded bg-gray-100 flex flex-col">
         <form action="" id="form">.
             <div class="username">
               <label for="username">Username</label>
